--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "next": "14.2.4",
     "nextjs": "^0.0.3",
     "react": "^18",
@@ -24,7 +25,10 @@
     "bootstrap": "^5.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "express": "^4.19.2",
     "react-bootstrap": "^2.10.2",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
     "sass": "^1.77.5",
     "sass-loader": "^14.2.1"
   }
